# oldandboring

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  Xargo.toml  build-and-run-iso.sh  build-and-run.sh  diff.txt  kernel.sym  x86_64-boring_os.json
boring-core/: Cargo.toml
boring-core/src/: lib.rs
boring-core/src/io/: mmio.rs  mod.rs
init/: Cargo.toml  Makefile  build.rs
init/src/: lib.rs
init/src/video/: mandelbrot.rs  mod.rs  raycaster.rs
init/src/video/raycaster/: mod.rs  rustcaster.rs
init/src/video/voxelspace/: mod.rs
init/src/video/voxelspace/map/: D1.rs  height.rs  mod.rs
kernel/: CMakeLists.txt  Cargo.toml  Makefile  cpuio.rs  interrupts.rs  kernel.c  lib.rs  macros.rs  x86_64-unknown-none-gnu.json
kernel/arch/: mod.rs
kernel/arch/x86/: arch.cmake  arch_main.c
kernel/arch/x86_64/: arch.cmake  boot.asm  grub.cfg  long_mode_start.asm  mod.rs  multiboot_header.asm  pushaq.macro  vga_buffer.rs
kernel/arch/x86_64/boot/: long_mode_start.asm  multiboot_header.asm
kernel/arch/x86_64/interrupts/: gdt.rs  ioapic.rs  lapic.rs  mod.rs  pit.rs
kernel/cmake/: load_arch.cmake
kernel/common/: mod.rs  take_cell.rs
kernel/cpuio/: mod.rs
kernel/drivers/: keyboard.rs  macros.rs  mod.rs  serial.rs
kernel/drivers/keyboard/: mod.rs  ps2.rs
kernel/drivers/pci/: headers.rs  mod.rs
kernel/drivers/vga/: mod.rs  text.rs  video.rs
kernel/interrupts/: mod.rs  pic.rs  pit.rs
kernel/libs/hole_list_allocator/: Cargo.toml
kernel/libs/hole_list_allocator/src/: lib.rs
kernel/memory/: area_frame_allocator.rs  mod.rs  stack_allocator.rs
kernel/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
kernel/src/: cpuio.rs  elf.rs  initramfs.rs  io.rs  lib.rs  macros.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: context.rs  gdt.rs  grub.cfg  mod.rs  vga_buffer.rs  video.rs
kernel/src/arch/x86_64/device/: serial.rs
kernel/src/arch/x86_64/init/: early_init.asm  init.asm  multiboot_header.asm
kernel/src/arch/x86_64/interrupts/: ioapic.rs  lapic.rs  mod.rs
kernel/src/arch/x86_64/memory/: address_space_manager.rs  mod.rs
kernel/src/arch/x86_64/memory/paging/: current_page_table.rs  frame_allocator.rs  free_list.rs  inactive_page_table.rs  mod.rs  page_table.rs  page_table_entry.rs  page_table_manager.rs
kernel/src/boot/: mod.rs  multiboot.rs  multiboot2.rs
kernel/src/devices/: uart_16550.rs
kernel/src/drivers/: serial.rs
kernel/src/drivers/keyboard/: mod.rs  ps2.rs
kernel/src/drivers/pci/: headers.rs  mod.rs
kernel/src/drivers/vga/: video.rs
kernel/src/interrupts/: mod.rs
kernel/src/memory/: address_space.rs  mod.rs
kernel/src/memory/allocator/: linked_list_allocator.rs  mod.rs
kernel/src/multitasking/: mod.rs  pcb.rs  scheduler.rs  stack.rs  tcb.rs
kernel/src/sync/: mod.rs  preemptable_mutex.rs  time.rs
kernel/src/syscalls/: mod.rs
kernel/sync/: kernel_mutex.rs  mod.rs  time.rs
kernel/vga_buffer/: mod.rs
kernel/video/: mandelbrot.rs
kernel/video/voxelspace/: mod.rs
kernel/video/voxelspace/map/: color.rs  height.rs  mod.rs
mkinitramfs/: Cargo.toml  Makefile
mkinitramfs/src/: main.rs
std/: Cargo.toml
std/src/: io.rs  lib.rs  math.rs  thread.rs  video.rs
std/src/screen/: mod.rs  primitive.rs
test/: Cargo.toml  Makefile  x86_64-unknown-boringos-gnu.json
test/src/: lib.rs
toolchain/: .gitignore  BuildCrossProject.cmake  CMakeLists.txt  build-toolchain.sh  set-env-vars.sh
toolchain/cmake/: BuildCrossProject.cmake  GetDate.cmake  StringReplaceInDir.cmake  StringReplaceInFile.cmake
toolchain/patches/: binutils-2.27.patch  gcc-6.3.0.patch  newlib-1.19.0.patch
toolchain/patches/newlib/: wcswidth.c
toolchain/patches/newlib/boring/: crt0.s  crti.s  crtn.s  pwent.c  syscalls.c
toolchain/patches/newlib/include/: pwd.h
util/: utils.sh
util/boot/grub/: grub.cfg
