[package]
authors = ["Oliver Geller <oliver.geller@rochester.edu>"]
name = "boring_os"
version = "0.1.0"

[dependencies]
bitflags = "0.9.1"
multiboot2 = "0.3.2"
once = "0.3.3"
rlibc = "1.0"
spin = "0.4.5"
volatile = "0.2.3"
x86_64 = "0.1.2"

[dependencies.hole_list_allocator]
path = "kernel/libs/hole_list_allocator"

[lib]
crate-type = ["staticlib"]
path = "kernel/lib.rs"
