[package]
authors = ["Oliver Geller <oliver.geller@rochester.edu>"]
name = "boring_os"
version = "0.1.0"

[dependencies]
bit_field = "0.8.0"
bitflags = "0.9.1"
once = "0.3.3"
rlibc = "1.0"
spin = "0.4.6"
volatile = "0.2.3"
x86_64 = "0.1.2"
raw-cpuid = "3.0.0"

[dependencies.math]
git = "https://github.com/nagisa/math.rs"

[dependencies.hole_list_allocator]
path = "kernel/libs/hole_list_allocator"

[dependencies.multiboot2]
path = "kernel/libs/multiboot2-elf64"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.8"

[lib]
crate-type = ["staticlib"]
path = "kernel/lib.rs"
