[package]
name = "boringos_std"
version = "0.1.0"
authors = ["aticu <15schnic@gmail.com>"]
description = "The standard library used by BoringOS."
keywords = ["OS", "operating", "system", "BoringOS", "std"]
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
rlibc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
