[package]
authors = ["aticu <15schnic@gmail.com>"]
keywords = [
    "OS",
    "operating",
    "system",
    "BoringOS",
    "std",
]
license = "MIT"
name = "test"
version = "0.1.0"

[dependencies]
rlibc = "1.0.0"

[dependencies.boringos_std]
path = "../std"
version = "0.1"

[lib]
crate-type = ["staticlib"]
