[package]
authors = ["Oliver <olivergeller120@gmail.com>"]
name = "hole_list_allocator"
version = "0.1.0"

[dependencies]
spin = "0.4.5"
linked_list_allocator = { git = "https://github.com/phil-opp/linked-list-allocator" }

[dependencies.lazy_static]
lazy_static = "0.2.8"
features = ["spin_no_std"]
